@@ -1,10 +1,12 @@
+MD5 ad6cc23d8c2894be5446f01ff44215df k3b-0.11.17.ebuild 3304
 MD5 9616c81d25a5d0b68a5a1ac9f3d65106 k3b-0.11.14.ebuild 3286
 MD5 35905c7d679952e6848332c01fd19d5e k3b-0.11.16.ebuild 3286
 MD5 c016b365aa32b8fccc4e2aba09872ff1 k3b-0.11.12-r1.ebuild 3438
 MD5 c62ec660ddb5d4799019a2c6dd0b261a k3b-0.11.10.ebuild 3485
-MD5 21c9677555a7c5ce4dbc8b56e5b086d7 ChangeLog 10609
+MD5 b77ff66402f4bbf36792d70ac07e222b ChangeLog 10723
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
 MD5 090e222085c5d03ed73630217ec680ea files/digest-k3b-0.11.12-r1 205
 MD5 457551a84f78e8240d3b588d35892208 files/digest-k3b-0.11.10 205
 MD5 0ac0fbb1d64aa75bb3b32c9a31f791ed files/digest-k3b-0.11.14 132
 MD5 a6dc23f5f1b7b71b14d773aac51954d7 files/digest-k3b-0.11.16 132
+MD5 07a27bd19c22330f89e89f0e3d663a3a files/digest-k3b-0.11.17 132
