@@ -1,0 +1,2 @@
+MD5 5c07b7ffc2f931d84b18e9fe7aa2b41c k3b-0.11.17.tar.bz2 3187604
+MD5 80d1ac1766ad8a8cdadca5f4273f2d95 k3b-i18n-0.11.tar.bz2 2738463
