@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/k3b
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.73 2004/09/20 18:21:15 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.74 2004/09/23 19:58:21 carlo Exp $
+
+*k3b-0.11.17 (23 Sep 2004)
+
+  23 Sep 2004; Carsten Lohrke <carlo@gentoo.org> +k3b-0.11.17.ebuild:
+  version bump
 
 *k3b-0.11.16 (20 Sep 2004)
 
